2006-01-29  Yves Combe  <yves@ycombe.net>

	Suppress event connection on text. 
	Segfault seems to be fixed.

	* src/gcompris/gcompris_confirm.c: (gcompris_confirm_stop),
	(display_confirm):

2006-01-27  Yves Combe  <yves@ycombe.net>

	fix unpause bug in confirm.

	* src/gcompris/gcompris_confirm.c: (display_confirm):

2006-01-26  Yves Combe  <yves@ycombe.net>

	small memory fix: pixbuf not freed after use.

	* src/gcompris/gcompris_confirm.c: (display_confirm):

2006-01-25  Yves Combe  <yves@ycombe.net>

	fix colors in confirmation window.

	* src/gcompris/gcompris_confirm.c: (display_confirm):

2006-01-25  Yves Combe  <yves@ycombe.net>

	add a confirmation popup on quit. Yet colors problem because of shadow.

	* src/boards/menu2.c: (menu_create_item):
	* src/gcompris/Makefile.am:
	* src/gcompris/bar.c: (item_event_bar), (confirm_quit):
	* src/gcompris/gcompris.h:
	* src/gcompris/gcompris_confirm.c: (gcompris_confirm),
	(gcompris_confirm_stop), (display_confirm), (free_stuff),
	(set_content), (button_event):

2006-01-25  Bruno coudoin  <bruno.coudoin@free.fr>

	First release of a new activity, the wordprocessor.
	Uncomplete yet.

	* boards/Makefile.am:
	* boards/boardicons/README:
	* boards/boardicons/wordprocessor.png:
	* boards/wordprocessor.xml.in:
	* src/boards/Makefile.am:
	* src/boards/wordprocessor.c: (pause_board), (start_board),
	(end_board), (set_level), (is_our_board),
	(wordprocessor_destroy_all_items), (wordprocessor_create),
	(item_event):

2006-01-23  Yves Combe  <yves@ycombe.net>

	constraint resize icon.

	* src/boards/menu2.c: (menu_create_item):

2006-01-23  Yves Combe  <yves@ycombe.net>

	add background for menu2, with the differents zones. 

	* boards/skins/gartoon/gcompris-menu2bg.png:
	* src/boards/menu2.c: (menu_start):

2006-01-23  Yves Combe  <yves@ycombe.net>

	fix segfault i had in level 4 5 6 of magic hat.

	* src/boards/magic_hat.c: (place_item):

2006-01-23  Yves Combe  <yves@ycombe.net>

	fix bug in menu2.